--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     text-align: center;
 }
 
-
 .large-button {
     font-size: 24px;
     padding: 20px;
@@ -29,8 +28,15 @@ body {
     background-color: #ff9900;
 }
 
+/* Style for disabled buttons */
+.large-button:disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+}
+
 .content-container {
-    margin-top: 30px;
+    margin-top: 80px; /* Leave space for the sticky menu */
 }
 
 table {
@@ -45,28 +51,29 @@ th, td {
     text-align: center;
 }
 
-caption {
+caption h2 {
     font-size: 1.5em;
     margin-bottom: 10px;
     font-weight: bold;
 }
 
-
 .button-container {
-    top: 0;  /* Stick the button container to the top */
-    position: fixed;  /* Fix the position so it stays at the top */
-    width: 100%;  /* Make it span the full width of the page */
-    background-color: #f4f4f4;  /* Background color to distinguish it */
-    padding: 10px;  /* Add some padding */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  /* Optional: Add shadow for better visibility */
-    z-index: 1000;  /* Ensure the buttons stay on top of other elements */
+    top: 0;
+    position: fixed;  /* Stick the button container to the top */
+    width: 100%;
+    background-color: #f4f4f4;
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  /* Add shadow for better visibility */
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
 }
 
 /* Style for the active (highlighted) button */
 button.active {
-    background-color: #ffcc00;  /* Highlighted background color */
-    color: white;               /* Text color */
-    border: 2px solid #ff9900;  /* Optional: Add a border to make it more noticeable */
+    background-color: #ffcc00;
+    color: white;
+    border: 2px solid #ff9900;
 }
 
 /* Optional: Adjust default button styling */
@@ -89,6 +96,7 @@ button {
     margin-top: 50px;
     overflow: scroll;
 }
+
 .flashcard {
     width: 250px;
     height: 250px;
